@@ -1,3 +1,8 @@
+2021/07/12(v1.0b3)
+--
+1. add disable notification option
+
+
 2021/07/10(v1.0b2)
 --
 1.new command "UNPAID COIN"
